--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -23,7 +23,7 @@
   email: shm3313@gmail.com
   number_educ: 3
   education1: PhD, University of Illinois at Urbana-Champaign (UIUC)
-  eductiona2: MS, Korea Advanced Institute of Science and Technology (KAIST)
+  education2: MS, Korea Advanced Institute of Science and Technology (KAIST)
   education3: BS, Hanyang University
 
 - name: Abdolvahhab Rostamijavanani
