--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -28,7 +28,7 @@
 
 - name: Abdolvahhab Rostamijavanani
   photo: .jpg
-  info: PhD student, started Jan 2020
+  info: PhD student
   email: arostami@mtu.edu
   number_educ: 2
   education1: MS, Amirkabir University of Technology - Tehran Polytechnic
@@ -36,7 +36,7 @@
 
 - name: Faraz Abed Azad
   photo: .jpg
-  info: PhD student, started Aug 2021
+  info: PhD student
   email: fabedaza@mtu.edu
   number_educ: 2
   education1: MS University of Tehran
@@ -44,7 +44,7 @@
 
 - name: Saleh SOTUBADI
   photo: .jpg
-  info: PhD Student, started Aug 2021
+  info: PhD Student
   email: svalizad@mtu.edu
   number_educ: 2
   education1: MS, University of Tabriz
