--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,8 +2,12 @@
   headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
   See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
 
-- date: 1. October 2021
-  headline: Maialen will join us within a collaboration with the <a href="http://www.ingmarswart.nl">Swart Lab</a> -- welcome Maialen!
+
+- date: November 2021
+  headline: Postdoc Dr. Shanwu Li made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "Hierarchical Multi-scale Deep Learning for Super-resolution Ultrasonic Array Imaging". 
+
+- date: November 2021
+  headline: Postdoc Dr. Homin Song made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "A physics-integrated deep learning framework for discovering reduced-order models of nonlinear dynamical systems". 
 
 - date: 15. September 2021
   headline: Amber will join us with Casimir-Nanofront PhD fellowship -- welcome Amber!
