--- a/_data/news.yml
+++ b/_data/news.yml
@@ -9,8 +9,8 @@
 - date: November 2021
   headline: Postdoc Dr. Homin Song made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "A physics-integrated deep learning framework for discovering reduced-order models of nonlinear dynamical systems". 
 
-- date: 15. September 2021
-  headline: Amber will join us with Casimir-Nanofront PhD fellowship -- welcome Amber!
+- date: September 2021
+  headline: Our patent is issued "FULL-FIELD IMAGING LEARNING MACHINE (FILM)" (US Patent Number: 11,127,127)
 
 - date: 28. June 2021
   headline: Welcome Jinwon!
@@ -19,8 +19,7 @@
   headline: "Koen wrote about his research <a href='https://epn.eps.org/wp-content/uploads/2021/04/EPN-52-2.pdf'>in EurophysicsNews</a> (page 12)."
 
 - date: 16. February 2021
-  headline: "Our new paper on twisted bilayer graphene from our Leiden-ICFO collaboration <a href='https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.3.013153'>in PRR</a>."
-
+  headline: "Our paper wins a Best Paper award in the IMAC 2021 of SEM, "Full-Field 3D Experimental Modal Analysis from Dynamic Point Clouds Measured Using a Time-of-Flight Imager" <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>. 
 - date: 22. January 2021
   headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
 
