--- a/_data/news.yml
+++ b/_data/news.yml
@@ -23,7 +23,7 @@
 
 - date: 22. October 2020
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
-  headline: Dr. Yang's team (PI-Dr. Leo Liu) is awarded a research project from Federal Highway Adminstration (FHWA) <a href='https://blogs.mtu.edu/icc/2020/10/cees-zhen-liu-is-pi-of-689k-dept-of-transportation-r-d-contract/'>[News]</a>. to study deep and reinforcement learning for autonomous winter road maintenance decision making. 
+  headline: Dr. Yang (Co-PI, PI-Dr. Zhen Liu) is awarded a research project from Federal Highway Adminstration (FHWA) <a href='https://blogs.mtu.edu/icc/2020/10/cees-zhen-liu-is-pi-of-689k-dept-of-transportation-r-d-contract/'>[News]</a>. to explore deep and reinforcement learning for autonomous winter road maintenance decision making. 
 
 - date: 21. January 2021
   headline: "<a href='https://arxiv.org/abs/2101.08535'>New paper on arXiv</a>, on Cooper pairs above Tc"
