--- a/_data/news.yml
+++ b/_data/news.yml
@@ -30,7 +30,7 @@
 #- date: 16. March 2021
 #  headline: "Koen wrote about his research <a href='https://epn.eps.org/wp-content/uploads/2021/04/EPN-52-2.pdf'>in EurophysicsNews</a> (page 12)."
 
-- date: 16. February 2021
+- date: February 2021
   headline: Our paper wins a Best Paper award in the IMAC 2021 of SEM, 'Full-Field 3D Experimental Modal Analysis from Dynamic Point Clouds Measured Using a Time-of-Flight Imager' <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>. 
 
 - date: 22. October 2020
