--- a/_data/news.yml
+++ b/_data/news.yml
@@ -13,7 +13,7 @@
   headline: Postdoc Dr. Homin Song made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "A physics-integrated deep learning framework for discovering reduced-order models of nonlinear dynamical systems". 
 
 - date: September 2021
-  headline: <b>Our 2nd patent is issued 'FULL-FIELD IMAGING LEARNING MACHINE (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>
+  headline: "<b>Our 2nd patent is issued 'FULL-FIELD IMAGING LEARNING MACHINE (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>"
   
 - date: June 2021
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
@@ -31,7 +31,7 @@
 #  headline: "Koen wrote about his research <a href='https://epn.eps.org/wp-content/uploads/2021/04/EPN-52-2.pdf'>in EurophysicsNews</a> (page 12)."
 
 - date: February 2021
-  headline: Our paper wins a Best Paper award in the IMAC 2021 of SEM, 'Full-Field 3D Experimental Modal Analysis from Dynamic Point Clouds Measured Using a Time-of-Flight Imager' <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>. 
+  headline: "Our paper wins a Best Paper award in the IMAC 2021 of SEM, 'Full-Field 3D Experimental Modal Analysis from Dynamic Point Clouds Measured Using a Time-of-Flight Imager' <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>."
 
 - date: 22. October 2020
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
