--- a/_data/news.yml
+++ b/_data/news.yml
@@ -7,10 +7,10 @@
   headline: Dr. Yang (PI) is awarded a new research project to advance AI-enabled ultrasonics. 
 
 - date: November 2021
-  headline: Postdoc Dr. Shanwu Li made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "Hierarchical Multi-scale Deep Learning for Super-resolution Ultrasonic Array Imaging". 
+  headline: Postdoc Dr. Homin Song presented our hierarchical Multi-scale Deep Learning for Super-resolution Ultrasonic Imaging in AAAI 2021 Fall Symposium. 
 
 - date: November 2021
-  headline: Postdoc Dr. Homin Song made a presentation in the Association for the Advancement of Artificial Intelligence (AAAI) 2021 Fall Symposium, "A physics-integrated deep learning framework for discovering reduced-order models of nonlinear dynamical systems". 
+  headline: Postdoc Dr. Homin Song presented our physics-integrated deep learning framework for modeling nonlinear dynamical system in AAAI 2021 Fall Symposium. 
 
 - date: September 2021
   headline: "<b>Our 2nd patent is issued 'FULL-FIELD IMAGING LEARNING MACHINE (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>"
@@ -31,11 +31,11 @@
 #  headline: "Koen wrote about his research <a href='https://epn.eps.org/wp-content/uploads/2021/04/EPN-52-2.pdf'>in EurophysicsNews</a> (page 12)."
 
 - date: February 2021
-  headline: "Our paper wins a Best Paper award in the IMAC 2021 of SEM, 'Full-Field 3D Experimental Modal Analysis from Dynamic Point Clouds Measured Using a Time-of-Flight Imager' <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>."
+  headline: "Our paper wins a Best Paper award in the IMAC 2021 of Society of Experimental Mechanics (SEM) <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>."
 
 - date: 22. October 2020
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
-  headline: Dr. Yang (Co-PI, PI-Dr. Zhen Liu) is awarded a new research project from Federal Highway Adminstration (FHWA) <a href='https://blogs.mtu.edu/icc/2020/10/cees-zhen-liu-is-pi-of-689k-dept-of-transportation-r-d-contract/'>[News]</a>. to explore deep and reinforcement learning for autonomous winter road maintenance decision making. 
+  headline: Dr. Yang (Co-PI, PI-Dr. Zhen Liu) is awarded a new research project from Federal Highway Adminstration (FHWA) <a href='https://blogs.mtu.edu/icc/2020/10/cees-zhen-liu-is-pi-of-689k-dept-of-transportation-r-d-contract/'>[News]. 
 
 - date: 21. January 2021
   headline: "<a href='https://arxiv.org/abs/2101.08535'>New paper on arXiv</a>, on Cooper pairs above Tc"
