--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,8 @@
 - date: 30. October 2021
-  headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
-  See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
-
+  #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
+  #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
+  headline: "**Hiring a postdoc/scientist in Ultrasonics: <a href='https://engineering.academickeys.com/job/2wa9lxd8/PostdocScientist_in_Ultrasonics'>post</a>**.
+  
 - date: November 2021
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
   headline: Dr. Yang (PI) is awarded a new research project to advance AI-enabled ultrasonics. 
@@ -33,7 +34,7 @@
 - date: February 2021
   headline: "Our paper wins a Best Paper award in the IMAC 2021 of Society of Experimental Mechanics (SEM) <a href='https://link.springer.com/chapter/10.1007/978-3-030-76335-0_17'>paper</a>."
 
-- date: 22. October 2020
+- date: October 2020
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
   headline: Dr. Yang (Co-PI, PI-Dr. Zhen Liu) is awarded a new research project from Federal Highway Adminstration (FHWA) <a href='https://blogs.mtu.edu/icc/2020/10/cees-zhen-liu-is-pi-of-689k-dept-of-transportation-r-d-contract/'>[News]. 
 
