--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
-- date: 30. October 2021
+- date: December 2021
   #headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
   #See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
-  headline: "**Hiring a postdoc/scientist in Ultrasonics: <a href='https://engineering.academickeys.com/job/2wa9lxd8/PostdocScientist_in_Ultrasonics'>post</a>**.
+  headline: "**Hiring a postdoc/scientist in Ultrasonics: <a href='https://engineering.academickeys.com/job/2wa9lxd8/PostdocScientist_in_Ultrasonics'>post</a>**."
   
 - date: November 2021
   #headline: "<b>Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!</b>"
