--- a/_data/news.yml
+++ b/_data/news.yml
@@ -11,7 +11,7 @@
   headline: Postdoc Dr. Homin Song presented our hierarchical Multi-scale Deep Learning for Super-resolution Ultrasonic Imaging in AAAI 2021 Fall Symposium. 
 
 - date: November 2021
-  headline: Postdoc Dr. Homin Song presented our physics-integrated deep learning framework for modeling nonlinear dynamical system in AAAI 2021 Fall Symposium. 
+  headline: Postdoc Dr. Shanwu Li presented our physics-integrated deep learning framework for modeling nonlinear dynamical system in AAAI 2021 Fall Symposium. 
 
 - date: September 2021
   headline: "<b>Our 2nd patent is issued 'FULL-FIELD IMAGING LEARNING MACHINE (FILM)' (US Patent Number: 11,127,127).</b> See also our 1st patent: <a href='https://patents.google.com/patent/US10567655B2/en'>US Patent 10,567,655</a>"
