--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -35,7 +35,7 @@
   authors: H. Song, Y. Yang
   link:
     url: https://www.sciencedirect.com/science/article/pii/S0963869520302164
-    display: Structural Health Monitoring 116, 102344 (2020)
+    display: NDT & E International 116, 102344 (2020)
   highlight: 1
   news2:
 
