--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -40,7 +40,7 @@
   news2:
   
 - title: "3D structural vibration identification from dynamic point clouds"
-  image: 3D.png
+  image: 3D.jpg
   description:  We identify 3-Dimensional full-field modes of dynamic structures from point cloud data acquired using a commercial, low-cost, time-of-flight imager. 
   authors: M. Silva, A. Green, J. Morales, P. Meyerhofer, Y. Yang, E. Figueiredoe, J. Costa, D. Mascarenas
   link:
@@ -70,7 +70,7 @@
   news2:
 
 - title: "Nonnegative matrix factorization-based blind source separation for full-field and high-resolution modal identification from video"
-  image: nonnegative.png
+  image: nonnegative.jpg
   description: Our method performs simultaneous processing of all pixel time-series to extract full-field high-resolution mode shapes and other modal parameters. 
   authors: M. Silva, B. Martinez, E. Figueiredo, J. Costa, Y. Yang, D. Mascarenas
   link:
