--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -117,7 +117,7 @@
     url: https://www.sciencedirect.com/science/article/pii/S0888327016303272
     display: Mechanical Systems and Signal Processing 85, 567-590 (2017)
   highlight: 1
-  news2: [scope - R&D 100 - Video-Based Dynamic Measurement & Analysis](https://www.youtube.com/watch?v=Khg_k9iRV6U&list=PLDUDFmyKFhnd7OMfpePzJDHraQjSU87Pt&index=23)
+  news2: [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)
 #- title: "Direct evidence for Cooper pairing without a spectral gap in a disordered superconductor above Tc"
 #  image: Pairs3.png
 #  description: We use our atomic-scale scanning tunneling noise setup on a disordered superconductor, and discover a state above TC that, much like an ordinary metal, has no (pseudo)gap, but carries charge via paired electrons.
